--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Project Name",
+  "name": "Leigh-Steiner-Senior-Enrichment",
   "version": "0.0.1",
-  "description": "A review time project",
+  "description": "senior gateway review",
   "main": "index.js",
   "scripts": {
     "test": "mocha **/*.test.js *.test.js",
@@ -15,6 +15,7 @@
     "skeleton"
   ],
   "dependencies": {
+    "axios": "^0.16.2",
     "body-parser": "^1.15.2",
     "chalk": "^1.1.3",
     "express": "^4.14.0",
@@ -23,8 +24,9 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
-    "redux": "^3.6.0",
     "react-router": "^3.0.0",
+    "react-router-dom": "^4.1.1",
+    "redux": "^3.6.0",
     "redux-logger": "^2.7.0",
     "redux-thunk": "^2.1.0",
     "sequelize": "^3.24.6"
